# air_control

./: Cargo.toml  LICENSE
src/: main.rs  mouse.rs
src/mouse/: mac.rs  types.rs  win.rs
static/: index.html
web_ui/air-control/: README.md  package-lock.json  package.json  vite.config.ts
web_ui/air-control/src/: App.vue
web_ui/air-control/src/assets/: base.css  main.css
web_ui/air-control/src/components/icons/: fullScreen.vue
web_ui/air-control/src/views/: HomeView.vue
