[package]
name = "air_control"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.64.0", features = ["serve-static","websocket"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1"
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }